<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DashBoardSection.See_DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_arrow_icon"
            android:layout_width="23dp"
            android:layout_height="25dp"
            android:layout_weight="10"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:layout_marginTop="10dp"
            android:text="Customer's Details"
            android:gravity="center"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/location_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/gray_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_txt">

        <TextView
            android:id="@+id/txt_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="1dp"
            android:paddingStart="1dp"
            android:text="@string/address_user"
            android:textColor="@color/black" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/customer_s_details"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_address" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_customer"
        app:strokeColor="#e7e7e7"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_weight="40"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/alex_george"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_marginTop="15dp"
                android:layout_weight="20"
                android:src="@drawable/profile"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

<!--            <RatingBar-->
<!--                style="?android:attr/ratingBarStyleIndicator"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:isIndicator="false"-->
<!--                android:layout_marginStart="5dp"-->
<!--                android:max="5"-->
<!--                android:rating="0"-->
<!--                android:scaleX=".8"-->
<!--                android:scaleY=".8"-->
<!--                android:theme="@style/MyRatingBar" />-->

            <!--            <TextView-->
<!--                android:id="@+id/number_user"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:drawableStart="@drawable/ic_call"-->
<!--                android:drawablePadding="12dp"-->
<!--                android:paddingStart="15dp"-->
<!--                android:text="@string/_9090909090"-->
<!--                android:textColor="@color/black" />-->

            <TextView
                android:id="@+id/address_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_new"
                android:drawablePadding="12dp"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:text="@string/email"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="10dp"
                android:alpha="0.2"
                android:background="@color/colorRemaining" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_booking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="50"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/booking_date"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="50"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/booking_time"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_of_booking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:text="@string/_24_06_2021"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/time_slot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:text="@string/_12_45_pm"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/call_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/call_now"
        android:onClick="callUser"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/txt_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/job_work_details"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_btn" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#f9f9f9"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardCornerRadius="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_job"
            app:strokeColor="#e7e7e7"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repair_range_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/repair_range_estimation"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fan_not_working"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/fan_not_working_rs_100_rs_350"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_circle" />

                <TextView
                    android:id="@+id/fan_speed_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/fan_speed_is_low_rs_50_rs_100"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_circle" />

                <View
                    android:id="@+id/view_fan"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorRemaining" />

                <TextView
                    android:id="@+id/disclaimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/disclaimer"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/disclaimer_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/disclaimer_txt" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>



        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:padding="8dp"
            android:text="@string/cancel_booking"
            android:textAllCaps="false"
            android:textColor="#DC143C"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/happy_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:padding="8dp"
            android:text="Job Status"
            android:textAllCaps="false"
            android:textColor="#DC143C"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>